# SVforensics

./: .gitignore  LICENSE  LICENSE.en  README.en.md  README.md  download_files.py  download_info.json  process_embeddings.py  processed_embeddings.csv  pyproject.toml  requirements.txt
config/: plot_config.json  svforensics.json
docs/: cli_usage.md  future_enhancements.md  methodology_details.md  private_repository_access.md  speaker_verification_process.md
notebooks/: svforensics.ipynb
svforensics/: __init__.py  __main__.py  audioprep.py  case_embeddings.py  config.py  download.py  embeddings.py  metadata_embedding_merge.py  similarity.py  testlists.py  verification.py
tests/: README.md  __init__.py  test_audioprep.py  test_testlists.py
